<resources>
    <string name="app_name">AppSSD</string>
    <!--Parte de Iniciar sesion-->
    <string name="nombre">Nombre</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="confirmar_contrasena">Confirmar Contraseña</string>
    <string name="olvidaste_tu_contraseña">¿Olvidaste tu contraseña?</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="Registro_llenado">Registro</string>
    <string name="cambiar_idioma">Cambiar idioma</string>
    <string name="no_existe_usuario">No existe usuario</string>
    <!--Parte de Iniciar sesion-->

    <!--Parte del Registro-->
    <string name="error_vacio_edit_text">Esta vacío</string>
    <string name="no_coinciden">Las contraseñas no coinciden</string>
    <string name="se_creo_usuario_correctamente">Se creó usuario correctamente.</string>
    <string name="autentificacion_error">No se ha confirmado el correo. Favor de confirmar…</string>
    <string name="token">Token</string>
    <string name="registro_token_correctamente">Se registro su token correctamente.</string>
    <string name="token_no_existe">El token que ingreso no existe, favor de verificarlo.</string>
    <string name="token_en_uso">El token que ingreso ya esta en uso!, favor de ingresar otro.</string>
    <!--Parte del Registro-->

    <!--Parte de Recupera tu contraseña-->
    <string name="recupera_contrasena">Recupera tu contraseña</string>
    <string name="recuperar">Recuperar</string>
    <!--Parte de Recupera tu contraseña-->

    <!--<string name="nombre">Nombre</string>-->

    <string name="inicio">Inicio</string>

    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="elegir_usuario">Elige tu usuario</string>
    <string name="administrador">Admin</string>
    <string name="estandar">Estandar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hola fragmento en blanco</string>

    <!--Parte de la Barra de navegacion de Usuario Estandar-->
    <string name="bienvenido_usuario">Bienvenid@</string>
    <string name="registros">Registros</string>
    <string name="usuarios_nav">Usuarios</string>
    <string name="chat">Chat</string>
    <string name="perfil">Perfil</string>
    <!--Parte de la Barra de navegacion de Usuario Estandar-->

    <!--Parte del Registro-->
    <string name="correo_registro">Correo</string>
    <string name="fecha_registro">Fecha de registro</string>
    <!--Parte del Registro-->

    <!--Parte de perfil-->
    <string name="nombre_perfil">Nombre</string>
    <string name="correo_perfil">Correo electronico</string>
    <string name="cambiar_foto">Cambiar</string>
    <!--Parte de perfil-->

    <!--Parte de chat-->
    <string name="No_mensaje_vacio">No puedes enviar un mensaje vacío</string>
    <string name="escribe_un_mensaje">Escribe un mensaje...</string>
    <string name="grupo_chat">Grupo:</string>
    <!--Parte de chat-->

    <!--Parte de Ingles-->
    <string name="escoge_el_idioma">Escoge el idioma…</string>

    <!--Parte de Ingles-->

    <!--Parte de Toolbar-->
    <string name="registros_toolbar">Registros</string>
    <string name="usuarios_toolbar">Usuarios</string>
    <string name="chat_toolbar">Chat</string>
    <string name="perfil_toolbar">Perfil</string>

    <!--Parte de Toolbar-->

    <!--Parte del Spinner de tipo de usuario-->
    <string-array name="options_user">
        <item name="Administrador">Administrador</item>
        <item name="Usuario">Usuario</item>
    </string-array>
    <!--Parte del Spinner de tipo de usuario-->

    <string name="eliminar_grupo">Eliminar grupo</string>
    <string name="eliminado_con_exito">El grupo ha sido eliminado con éxito</string>
    <string name="confirm_delete_group">¿Desea eliminar el grupo?</string>
    <string name="cancelar_dialog">Cancelar</string>
    <string name="see_users">Ver usuarios</string>
    <string name="no_users_add">No hay usuarios para agregar</string>
    <string name="no_users_delete">No hay usuarios para eliminar</string>
    <string name="participante_agregado">Participante agregado con éxito</string>
    <string name="participante_eliminado">Participante eliminado con éxito</string>
    <string name="agregar_usuario_dialog">Agregar</string>
    <string name="agregar_usuario_grupo">Agregar participantes</string>
    <string name="eliminar_usuario_grupo">Eliminar participantes</string>
    <string name="nombre_grupo">Nombre del grupo</string>
    <string name="option_grupo">Crear</string>
    <string name="grupo">Crear grupo</string>
    <string name="registrar_usuario">Registrar usuario</string>
    <string name="registrar_dialog_confirmacion">Registrar</string>
    <string name="eliminar_usuario">Eliminar</string>
    <string name="confirmar_eliminar">¿Desea eliminar el usuario seleccinonado?</string>
    <string name="usuario_eliminado">El usuario ha sido eliminado con éxito</string>
    <string name="grupo_creado">Grupo creado con éxito</string>

    <!--Parte de la videollamada-->
    <string name="video_call">Video llamada</string>
    <string name="llamada_entrante">Llamada entrante</string>
    <string name="nombres">Nombre(s)</string>

    <!--Parte de la videollamada-->

    <!--Parte de LLamada Entrante-->
    <string name="llamando">Llamando</string>
    <string name="error_al_conectar_llamada">Error al conectar la llamada, vuelva a intentar</string>
    <string name="cancelo_llamada">Canceló la llamada</string>
    <!--Parte de LLamada Entrante-->

    <!--Parte de Llamar-->

    <!--Parte de Llamar-->




</resources>