<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".RegistroUsuario">

    <EditText
        android:background="@drawable/custom_input"
        android:textColorHint="@color/color"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:padding="5dp"
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="197dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="490dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email"
        android:background="@drawable/custom_input"
        android:textColorHint="@color/color"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/correo_electronico"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/password"
        android:background="@drawable/custom_input"
        android:textColorHint="@color/color"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/password2"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/password2"
        android:background="@drawable/custom_input"
        android:textColorHint="@color/color"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/confirmar_contrasena"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/btnRegister2"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/btnRegister2"
        android:textSize="15dp"
        android:textAllCaps="false"
        android:background="@drawable/custom_button_red"
        android:textColor="@color/color"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="237dp"
        android:text="@string/registrarse"
        android:onClick="registerUser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password2" />
</androidx.constraintlayout.widget.ConstraintLayout>